completed result ui

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
 
 body {
   background-color: white;
-  background-image: linear-gradient(to top right, white, #71acea57);
+  /* background-image: linear-gradient(to top right, white, #71acea57); */
   font-family: 'Open sans', sans-serif;
 }
 
