defined background for index and result page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,9 +10,7 @@
 }
 
 body {
-
-  background: white url('/assets/lineargradient.png') no-repeat center;
-  background-size: cover;
+  background-color: white;
   font-family: 'Open sans', sans-serif;
 }
 
